--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
-  <div id="app"></div>
+  <div id="root"></div>
 
 </body>
 
